# ocaml_python_bindgen

./: .gitattributes  .gitignore  .ocamlformat  CHANGELOG.md  LICENSE-MIT.txt  Makefile  README.md  dune-project  pyml_bindgen-dev.opam  pyml_bindgen.opam  pyml_bindgen.opam.template
.github/workflows/: build_and_test.yml  generate_docs.yml
_docs_src/: make_docs.sh  mkdocs.yml
_docs_src/custom_theme/: main.html
_docs_src/src/: attributes.md  auto-gen-bindings.md  cli-options.md  dictionaries-2.md  dictionaries.md  embedding-python.md  examples.md  getting-started.md  gotchas-bugs.md  index.md  instance-methods.md  matplotlib-2.md  matplotlib.md  names.md  no-functions.md  of-pyobject.md  py_fun_name.md  recursive.md  robots.txt  rules-overview.md  split-ml-mli.md  static-methods.md  todo.md  tuples.md  types.md
bench/: bench_import_module.ml  dune
docs/: 404.html  index.html  robots.txt  search.html  sitemap.xml
docs/attributes/: index.html
docs/auto-gen-bindings/: index.html
docs/cli-options/: index.html
docs/dictionaries/: index.html
docs/dictionaries-2/: index.html
docs/embedding-python/: index.html
docs/examples/: index.html
docs/getting-started/: index.html
docs/gotchas-bugs/: index.html
docs/instance-methods/: index.html
docs/matplotlib/: index.html
docs/matplotlib-2/: index.html
docs/names/: index.html
docs/no-functions/: index.html
docs/ocaml-attributes/: index.html
docs/of-pyobject/: index.html
docs/py_fun_name/: index.html
docs/recursive/: index.html
docs/rules-overview/: index.html
docs/search/: search_index.json
docs/split-ml-mli/: index.html
docs/static-methods/: index.html
docs/todo/: index.html
docs/tuples/: index.html
docs/types/: index.html
examples/: README.md
examples/attributes/: README.md  dune  run.ml
examples/attributes/lib/: dune  examples_attributes_lib.ml
examples/attributes/lib/specs/: cat.txt
examples/attributes/py/: cat.py
examples/attributes/test/: dune  run.t
examples/embedding_python_source/: README.md  dune  run.ml
examples/embedding_python_source/lib/: dune  math.ml
examples/embedding_python_source/py/math/: adder.py
examples/embedding_python_source/test/: dune  run.t
examples/gen_ml_and_mli/: .ocamlformat  README.md  dune-project
examples/gen_ml_and_mli/lib/: dune  orange.ml  orange.mli  thing.ml  thing.mli
examples/gen_ml_and_mli/lib/py/: orange.py  thing.py
examples/gen_ml_and_mli/lib/specs/: orange.txt  thing.txt
examples/gen_ml_and_mli/test/: dune  it_works.t
examples/importing_modules/: README.md  dune  run.ml
examples/importing_modules/lib/: dune  magic_dust.ml  silly_math.ml
examples/importing_modules/lib/specs/magic_dust/: hearts.txt  sparkles.txt
examples/importing_modules/lib/specs/silly_math/adder/: add.txt
examples/importing_modules/lib/specs/silly_math/subtracter/: subtract.txt
examples/importing_modules/py/magic_dust/: hearts.py  sparkles.py
examples/importing_modules/py/silly_math/subtracter/: subtract.py
examples/importing_modules/test/: dune  run.t
examples/quick_start/: README.md  dune  lib.ml  run.ml
examples/quick_start/test/: dune
examples/recursive_modules/: README.md  dune  run.ml
examples/recursive_modules/lib/: dune  lib.ml
examples/recursive_modules/lib/specs/: cli_specs.tsv
examples/recursive_modules/py/: cat.py  human.py
examples/recursive_modules/test/: run.t
examples/tuples/: .ocamlformat  README.md  dune  lib.ml  run.ml  tuples.py  val_specs.txt
examples/tuples/test/: dune  run.t
lib/: dune  mkdir.ml  oarg.ml  otype.ml  py_fun.ml  shared.ml  specs_file.ml  utils.ml  version.ml
test/: README.md  dune  test_oarg.ml  test_otype.ml  test_py_fun.ml  test_specs_file.ml
test/basic_class_binding.t/: dune  run.t  run_no_check.ml  run_option.ml  run_or_error.ml  sigs_no_check.txt  sigs_option.txt  sigs_or_error.txt  silly.py
test/basic_cli.t/: run.t
test/binding_tuples.t/: dune  lib_ml.txt  run.ml  run.t  sigs.txt  silly.py
test/combine_rec_modules.t/: abc.ml  d.ml  e.ml  no_sig.ml  one_line.ml  run.t
test/embed_source.t/: bad_thing.py  dune  person.py  person2_runner.ml  person_runner.ml  person_specs.txt  person_thing_runner.ml  run.t  thing.py  thing_specs.txt
test/error_messages.t/: run.t  val_specs.txt
test/gen_multi.t/: run.t
test/gen_multi.t/specs/: cat_spec.txt  cli_specs.tsv  cli_specs_cat_first.tsv  human_spec.txt
test/helpers/: sanitize_logs
test/module_function_binding.t/: dune  run.t  run_no_caml_module.ml  run_with_caml_module.ml  sigs_no_check.txt  silly.py
test/nested_submodules.t/: dune  run.t  run_no_check.ml  run_option.ml  run_or_error.ml  silly.py  specs_no_check.txt  specs_option.txt  specs_or_error.txt
test/of_pyo_no_check.t/: hi.ml  run.t  silly_sigs_or_error.txt
test/of_pyo_option.t/: dune  hi.ml  run.t  silly_mod.py  silly_sigs_no_check.txt  silly_sigs_no_check_option.txt  silly_sigs_option_or_error.txt
test/of_pyo_or_error.t/: dune  hi.ml  run.t  silly_sigs_no_check_or_error.txt  silly_sigs_option.txt
test/old_bugs.t/: pr_value_bug.txt  run.t
test/py_fun_name_attr.t/: dune  run.ml  run.t  specs.txt
test/raw_pyobjects.t/: creature.ml  dune  run.ml  run.t  silly.py  specs.txt
test/split_caml_module.t/: dune  hello.ml  run.t  specs.txt
test_dev/: README.md  combine_rec_modules_cli_error.t  dune  gen_multi_cli_error.t  pyml_bindgen_cli_error.t
test_dev/gen_multi_cli_error.t/: bad.tsv
test_dev/gen_multi_cli_error.t/specs/: bad_file_names.tsv
test_dev/gen_multi_cli_error.t/specs/bad/: bad.tsv
test_dev/pyml_bindgen_cli_error.t/: run.t  specs.txt
