(executables
 (names bench_import_module)
 (libraries core core_bench pyml))

;;; Uncomment this if you need to regenerate the lib.
; (rule
;  (target lib.ml)
;  (mode
;   (promote (until-clean)))
;  (action
;   (progn
;    (with-stdout-to
;      lib.ml
;     (progn
;      (run %{bin:pyml_bindgen} val_specs.txt adder Adder --caml-module Adder)
;      (run %{bin:pyml_bindgen} val_specs.txt adder Adder --caml-module Adder_embedded --embed-python-source=adder.py)))
;     (run ocamlformat --inplace --name lib.ml lib.ml))))


