(executables
 (names bench_import_module)
 (libraries core core_bench core_unix.command_unix pyml))

; TODO: clean up the unused stuff rather than silence warning here

(env
 (dev
  (flags
   (:standard -w -32))))

;;; Uncomment this if you need to regenerate the lib.
; (rule
;  (target lib.ml)
;  (mode
;   (promote (until-clean)))
;  (action
;   (progn
;    (with-stdout-to
;      lib.ml
;     (progn
;      (run %{bin:pyml_bindgen} val_specs.txt adder Adder --caml-module Adder)
;      (run %{bin:pyml_bindgen} val_specs.txt adder Adder --caml-module Adder_embedded --embed-python-source=adder.py)))
;     (run ocamlformat --inplace --name lib.ml lib.ml))))
