(library
 (name test_lib)
 (libraries base base_quickcheck lib shexp.process stdio)
 (inline_tests)
 (preprocess
  (pps
   ppx_assert
   ppx_let
   ppx_sexp_conv
   ppx_string
   ppx_inline_test
   ppx_expect)))

(cram
 (applies_to :whole_subtree)
 (deps
  %{bin:combine_rec_modules}
  %{bin:pyml_bindgen}
  ./helpers/sanitize_logs))
